data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3857.wast
;; 6. **Section and Type Context Alignment Across Boundaries**:    - **Reasoning**: This test ensures alignment of type contexts and sections between calling and called modules.    - **Description**: Design modules where calls to imported functions require specific section and type context alignments. Check if both WebAssembly and wizard_engine maintain consistent section and type alignment during the transition.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (param i32) (result i32)))
    (func (result i32)
      (call $imported_func (i32.const 42)))
  )
  "type mismatch"
)